Fix the nav section on mobile

--- a/src/css/page.less
+++ b/src/css/page.less
@@ -12,6 +12,13 @@ header.splash {
   h1 {
     margin: 0;
     text-align: center;
+    font-size: 48px;
+    padding-top: 48px;
+
+    @media @mobile {
+      font-size: 36px;
+      padding-top: 24px;
+    }
   }
 
   img.hexes {
