--- a/src/css/seattletimes.less
+++ b/src/css/seattletimes.less
@@ -109,6 +109,12 @@ nav.main-nav {
     }
   }
 
+  .section {
+    @media @mobile {
+      display: none;
+    }
+  }
+
   .share.top {
     position: absolute;
     top: 10px;
